<resources>
    <string name="app_name">ParrillaBoton</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Linear1">Primer linear anidado</string>
    <string name="Linear2">Segundo linear anidado</string>
    <string name="Linear3">Tercer linear anidado</string>
    <string name="Linear4">edit_message</string>
    <string name="send" >envia</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_extra">Extra</string>
    <string name="title_activity_display_message">Nueva</string>
    <string name="edit_message">Escribe aqui...</string>
    <string name="edit_tel">telefono</string>
    <string name="llama">llamada</string>
    <string name="edit_mapa">mapa</string>
    <string name="buscaMapa">localizaNMap</string>
    <string name="edit_url">direccion</string>
    <string name="navega">navegador</string>
    <string name="edit_message2">edit_message2</string>
    <string name="send2">btvuelve</string>
    <string name="edit_message_del_display" />
    <string name="send2Back">IrPaVolver</string>
    <string name="tW_del_display" />

</resources>
